fix: icons not displaying on some Linux systems